feat: One of posts and moving between making post and showing rank

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Go-Trip</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="test_data">원질이 되는 것이다 그들은 앞이 긴지라 착목하는 곳이 원대하고 그들은 피가 더운지라 실현에 대한 자신과
+    용기가 있다 그러므로 그들은 이상의 보배를 능히 품으며 그들의이상은 아름답고 소듬스러운 열매를 맺어 우리 인생을 풍부하게.</string>
 </resources>
